# john

./: .cirrus.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .mailmap  .pre-commit.sh  .travis.yml  CONTRIBUTING.md  README  README-AS400  README-CUDA  README-jumbo  README.md  appveyor.yml  azure-pipelines.yml  circle.yml  cmpt_cp.pl  nadya.yurike@energibumi.com  shell.nix
src/: .pseudo_intrinsics.h.swp  7z_common.h  7z_common_plug.c  7z_fmt_plug.c  AFS_fmt.c  AzureAD_common.h  AzureAD_common_plug.c  AzureAD_fmt_plug.c  BFEgg_fmt_plug.c  BF_common.c  BF_common.h  BF_common_plug.c  BF_fmt.c  BF_std.c  BF_std.h  BSDI_fmt.c  CircleCI-MinGW.sh  DES_bs.c  DES_bs.h  DES_bs_b.c  DES_fmt.c  DES_std.c  DES_std.h  DES_vec.pl  DMD5_fmt_plug.c  DOMINOSEC8_fmt_plug.c  DOMINOSEC_fmt_plug.c  EPI_fmt_plug.c  FG2_fmt_plug.c  FGT_fmt_plug.c  GNUmakefile.in  HDAA_fmt_plug.c  IPB2_fmt_plug.c  KRB4_fmt_plug.c  KRB4_std.h  KRB4_std_plug.c  KRB5_fmt_plug.c  KRB5_std.h  KRB5_std_plug.c  KeccakDuplex.c  (+1440 more)
src/CL/: cl.h  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_dx9_media_sharing_intel.h  cl_egl.h  cl_ext.h  cl_ext_intel.h  cl_function_types.h  cl_gl.h  cl_gl_ext.h  cl_half.h  cl_icd.h  cl_layer.h  cl_platform.h  cl_va_api_media_sharing_intel.h  opencl.h
src/aes/: Makefile  Makefile.in  Makefile.legacy  Makefile.orig  aes.c  aes.h  aes_func.h
src/broken/: haval_fmt_plug.c  md2_fmt_plug.c  opencl_7z_fmt.c  opencl_DES_WGS.h  opencl_DES_fmt_plug.c  opencl_zip_fmt.c  panama_fmt_plug.c  zip_fmt.c
src/cuda/: cryptmd5.cu  cryptsha256.cu  cryptsha512.cu  cuda_common.cu  cuda_common.cuh  mscash.cu  mscash2.cu  phpass.cu  pwsafe.cu  rawsha256.cu  rawsha512.cu  wpapsk.cu  xsha512.cu
src/cygwin/: ethernet.h
src/ed25519-donna/: Makefile.in  Makefile.legacy  curve25519-donna-32bit.h  curve25519-donna-64bit.h  curve25519-donna-helpers.h  ed25519-donna-32bit-tables.h  ed25519-donna-64bit-tables.h  ed25519-donna-64bit-x86-32bit.h  ed25519-donna-64bit-x86.h  ed25519-donna-basepoint-table.h  ed25519-donna-impl-base.h  ed25519-donna-portable-identify.h  ed25519-donna-portable.h  ed25519-donna.c  ed25519-donna.h  ed25519-hash-custom.h  ed25519-hash.h  ed25519.h  modm-donna-32bit.h  modm-donna-64bit.h
src/escrypt/: Makefile  Makefile.in  Makefile.legacy  crypto_scrypt-best.c  crypto_scrypt-common.c  crypto_scrypt-nosse.c  crypto_scrypt-ref.c  crypto_scrypt-sse.c  crypto_scrypt.h  scrypt_platform.c  scrypt_platform.h  sha256.c  sha256.h  sysendian.h  tests.c
src/formats/: bitlocker2john.c  md5crypt_common.c  md5crypt_common.h
src/lzma/: 7zTypes.h  Bra.c  Bra.h  BraIA64.c  CpuArch.c  Lzma2Dec.c  LzmaDec.c  LzmaDec.h
src/m4/: ax_jtr_generic_logic.m4  ax_jtr_utility_macros.m4  ax_jtr_x86_logic.m4  ax_lang_compiler_ms.m4  ax_opencl.m4  ax_openmp.m4  ax_prog_cc_mpi.m4  ax_ztex.m4  jtr_arm_logic.m4  jtr_asm_logic.m4  jtr_asm_magic.m4  jtr_generic_logic.m4  jtr_local_conf.m4  jtr_mic_logic.m4  jtr_ppc_logic.m4  jtr_specific_configure_help_message.m4  jtr_systems_specific_logic.m4  jtr_utility_macros.m4  jtr_x86_logic.m4  pkg.m4
src/modes/: inc.c  inc.h
src/opencl/: 7z_kernel.cl  DES_bs_finalize_keys_kernel.cl  DES_bs_hash_checking_kernel.cl  DES_bs_kernel.cl  DES_bs_kernel_f.cl  DES_bs_kernel_h.cl  PBKDF2.cl  agile_kernel.cl  ansible_kernel.cl  argon2d_kernel.cl  argon2i_kernel.cl  axcrypt2_kernel.cl  bf_cpu_kernel.cl  bf_kernel.cl  bitcracker_kernel.cl  bitlocker_kernel.cl  bitwarden_kernel.cl  blockchain_kernel.cl  bsd_softraid_kernel.cl  cloudkeychain_kernel.cl  cryptmd5_kernel.cl  cryptmd5_opencl_kernel.cl  cryptsha256_kernel_AMD.cl  cryptsha256_kernel_DEFAULT.cl  cryptsha256_kernel_GPU.cl  cryptsha256_kernel_LOCAL.cl  cryptsha256_kernel_NVIDIA.cl  cryptsha512_kernel.cl  cryptsha512_kernel_AMD.cl  cryptsha512_kernel_AMD_V1.cl  cryptsha512_kernel_CPU.cl  cryptsha512_kernel_DEFAULT.cl  cryptsha512_kernel_GCN.cl  cryptsha512_kernel_GPU.cl  cryptsha512_kernel_GPU_1.cl  cryptsha512_kernel_LOCAL.cl  cryptsha512_kernel_NVIDIA.cl  cryptsha512_kernel_SLIM.cl  dmg_kernel.cl  encfs_kernel.cl  (+85 more)
src/packaging/: build.sh  com.openwall.John.appdata.xml  com.openwall.John.desktop  readme.md
src/plugins/: 7z_fmt_plug.c  AzureAD_fmt_plug.c  BFEgg_fmt_plug.c  DMD5_fmt_plug.c  DOMINOSEC8_fmt_plug.c  DOMINOSEC_fmt_plug.c  EPI_fmt_plug.c  FG2_fmt_plug.c  FGT_fmt_plug.c  HDAA_fmt_plug.c  IPB2_fmt_plug.c  KRB4_fmt_plug.c  KRB5_fmt_plug.c  MSCHAPv2_bs_fmt_plug.c  NETLM_fmt_plug.c  NETLMv2_fmt_plug.c  NETNTLM_bs_fmt_plug.c  NETNTLMv2_fmt_plug.c  NETSPLITLM_fmt_plug.c  NS_fmt_plug.c  NT-long_fmt_plug.c  PHPS2_fmt_plug.c  PHPS_fmt_plug.c  PO_fmt_plug.c  SKEY_fmt_plug.c  SybaseASE_fmt_plug.c  SybasePROP_fmt_plug.c  XSHA512_fmt_plug.c  XSHA_fmt_plug.c  adxcrypt_fmt_plug.c  agilekeychain_fmt_plug.c  aix_ssha_fmt_plug.c  andotp_fmt_plug.c  androidbackup_fmt_plug.c  androidfde_fmt_plug.c  ansible_fmt_plug.c  argon2_fmt_plug.c  as400_des_fmt_plug.c  as400_ssha1_fmt_plug.c  asaMD5_fmt_plug.c  (+203 more)
src/poly1305-donna/: Makefile.in  Makefile.legacy  README.md  poly1305-donna-16.h  poly1305-donna-32.h  poly1305-donna-64.h  poly1305-donna-8.h  poly1305-donna.c  poly1305-donna.h
src/secp256k1/: Makefile.in  Makefile.legacy  ecmult.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_impl.h  group.h  group_impl.h  libsecp256k1-config.h  main_impl.h  secp256k1.c  secp256k1.h  secp256k1_ecdh.h  util.h
src/tests/: unit-tests.c  unit_tests.c
src/unplugged/: DOMINOSEC_fmt_plug.c  IPB2_fmt_plug.c  NETLM_fmt_plug.c  NETSPLITLM_fmt_plug.c  NS_fmt_plug.c  XSHA512_fmt_plug.c  blake2b-ref_plug.c  clipperz_srp_fmt_plug.c  drupal7_fmt_plug.c  gpg_fmt_plug.c  hmacSHA512_fmt_plug.c  keyring_fmt_plug.c  krb5pa-sha1_fmt_plug.c  lastpass_fmt_plug.c  lotus5_fmt_plug.c  md4_gen_fmt_plug.c  mscash2_fmt_plug.c  mysqlSHA1_fmt_plug.c  mysql_fmt_plug.c  nt2_fmt_plug.c  nukedclan_fmt_plug.c  odf_fmt_plug.c  osc_fmt_plug.c  pdf_fmt_plug.c  pwsafe_fmt_plug.c  racf_fmt_plug.c  rawSHA1_linkedIn_fmt_plug.c  rawSHA224_fmt_plug.c  rawSHA384_fmt_plug.c  rawSHA512_fmt_plug.c  uaf_encode_plug.c
src/unused/: crc32.py  (+107 more)
(+1524 files in other folders)
